# edubot_viz

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml
.github/workflows/: ci.yml  release.yml
launch/: bringup_view.launch.py  navigation_view.launch.py
rviz/: bringup_view.rviz  navigation_view.rviz
